--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-TODO!
+Trogdor++ is the C++ version of the Trogdor Text Adventure Engine, which was written in C.  The original project is no longer maintained.  For historical purposes, it can be found here:
 
+https://github.com/crankycyclops/trogdor
