added support for boost::thread, and added glue code to support either that or pthread

--- a/README
+++ b/README
@@ -1,3 +1,12 @@
 Trogdor++ is the C++ version of the Trogdor Text Adventure Engine, which was written in C.  The original project is no longer maintained.  For historical purposes, it can be found here:
 
 https://github.com/crankycyclops/trogdor
+
+Trogdor-pp supports both pthread and boost::thread. To compile with support for pthread, type:
+
+THREAD=pthread make
+
+To compile with support for boost::thread, simply type:
+
+make
+
