--- a/src/php7/trogdord/README
+++ b/src/php7/trogdord/README
@@ -1,6 +1,6 @@
 A PHP module that connects to and provides an interface for one or more instances of trogdord over the network. The configure script doesn't currently check for it, but the Boost Asio library must be installed in a place where the compiler can find it. If it's not, the build will fail.
 
-To build, issue the following commands:
+To compile and install, issue the following commands:
 
 phpize
 ./configure
